Updated to bootstrap

--- a/crag-mapper-server/app/views/index.scala.html
+++ b/crag-mapper-server/app/views/index.scala.html
@@ -1,9 +1,9 @@
 @(message: String, apiKey: String, initialCrags: String)
 
 @main("Crag Mapper") {
-<h2>Browse the worlds crag databases in an handy visual map format</h2>
+<h4>Browse the worlds crag databases in an handy visual map format</h4>
 
-<div id="map_canvas" style="height: 430px; width: 512px;"></div>
+<div id="map_canvas"></div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=@apiKey"></script>
 
