--- a/crag-mapper-server/app/views/main.scala.html
+++ b/crag-mapper-server/app/views/main.scala.html
@@ -7,6 +7,7 @@
     <title>@title</title>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.min.css")">
   </head>
   <body>
    @content
