--- a/crag-mapper-server/app/views/index.scala.html
+++ b/crag-mapper-server/app/views/index.scala.html
@@ -7,7 +7,8 @@
 
 <script src="https://maps.googleapis.com/maps/api/js?key=@apiKey"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.3.6/svg.min.js"></script>
+<script src="@routes.Assets.versioned("lib/snap.svg/snap.svg-min.js")"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.3.6/svg.min.js"></script>-->
 
 <script type="application/json" id="crags">
 @Html(initialCrags)
