--- a/crag-mapper-server/app/views/index.scala.html
+++ b/crag-mapper-server/app/views/index.scala.html
@@ -3,11 +3,15 @@
 @main("Crag Mapper") {
 <h4>Browse the worlds crag databases in an handy visual map format</h4>
 
+<svg id="svg">
+  <!--<circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />-->
+</svg>
+
 <div id="map_canvas"></div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=@apiKey"></script>
 
-<script src="@routes.Assets.versioned("lib/snap.svg/snap.svg-min.js")"></script>
+<!--<script src="@routes.Assets.versioned("lib/Snap.svg/snap.svg-min.js")"></script>-->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.3.6/svg.min.js"></script>-->
 
 <script type="application/json" id="crags">
