--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -3,9 +3,7 @@
 @main("Crag Mapper") {
 <h4>Browse the worlds crag databases in an handy visual map format</h4>
 
-<svg id="svg">
-  <!--<circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />-->
-</svg>
+<svg id="svg" style="display:none" />
 
 <div id="map_canvas"></div>
 
