--- a/frontend/public/stylesheets/main.css
+++ b/frontend/public/stylesheets/main.css
@@ -1,7 +1,31 @@
-html, body {
+/* TODO: Swap to SASS: https://www.playframework.com/modules/sass-1.0/home or similar */
+
+html {
     height:100%;
 }
 
-#map_canvas {
+body {
+	padding-top: 60px;
+}
+
+#amap_canvas {
     height:80%;
+}
+
+.container {
+	max-width: 100vw;
+	width: 100vw;
+	padding-left: 0px;
+}
+
+.height-width-full {
+  height: 80vh;
+  width: 100vw;
+}
+
+.footer {
+	background-color: #d0d0d0;
+	margin-top: 20px;
+	padding: 20px 0;
+	line-height: 15px;
 }
